# matscript-2024

./: .gitmodules  CMakeLists.txt  README.md  test.msc
lib/: CMakeLists.txt
src/: commands.h  log.h  main.cpp  parsererror.cpp  parsererror.h  settings.h  test1.msc  token.cpp  token.h  tokeniterator.h  tokenizer.cpp  tokenizer.h  vm.cpp  vm.h
